FFL-161 Fixed issue with button height and select being unreadable

--- a/core/view/frontend/web/css/source/_module.less
+++ b/core/view/frontend/web/css/source/_module.less
@@ -40,7 +40,11 @@
 }
 .dealers-modal-button {
     width: 100%;
-    padding: 20px 40px !important;
+    padding: 0 !important;
+    min-height: 60px;
+}
+select.dealers-modal-button {
+    padding-left: 2ch !important;
 }
 .ffl-flex-container {
     display: flex;
